# EIIF_linking

./: .gitignore  README.md  SETUP.md  pyproject.toml
config/: example_linkage.yml
data/: suburb_lga.csv
docs/: DELIVERY_CHECKLIST.md  FILE_MANIFEST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  REFERENCE.md  V2_README.md
src/eii_flinking/: config.py  pipeline.py  schema.py  slk.py
src/eii_flinking/app/: main.py
src/eii_flinking/connectors/: base.py  database_connector.py  excel_connector.py  factory.py
src/eii_flinking/stages/: ingest.py  post_linkage.py  proportions.py
src/eiif_linking/: address_parser.py  config.py  pipeline.py  schema.py
src/eiif_linking/app/: main.py
src/eiif_linking/connectors/: csv_connector.py
src/eiif_linking/duckdb/: connection.py
src/eiif_linking/stages/: blocking.py  ingest.py  post_linkage.py  scoring.py
