[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eii-flinking"
version = "0.1.0"
description = "Cross-dataset record linkage — matches people across two independent data extracts"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.36.0",
    "plotly>=5.22.0",
    "pyarrow>=16.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
eii-link = "eii_flinking.pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eii_flinking"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
